# blog001

./: .env  .plan  Cargo.toml  Dockerfile  README.md  fly.toml  start.sh  tailwind.config.js
migrations/: 20260410180500_create_posts_tags_tables.sql
src/: app.rs  auth.rs  db.rs  main.rs  markdown.rs  router.rs  session.rs
src/components/: admin_layout.rs  layout.rs  markdown_editor.rs  mod.rs  post_card.rs  tag_badge.rs  tag_filter.rs
src/middleware/: auth.rs
src/pages/: home.rs  login.rs  mod.rs  post.rs
src/pages/admin/: dashboard.rs  editor.rs  mod.rs  posts.rs
src/server/: posts.rs  tags.rs
style/: main.css
